--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,17 @@ html, body, #root {
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imgContainer {
+  width: 60vw;
+}
+
+.imgContainer > img {
+  width: 100%;
+}
