cursor turns to rectangle -- pointer is centered in rectangle

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html, body, #root {
 .imgContainer {
   width: 60vw;
   position: relative;
+  cursor: url('/public/Untitled.png') 50 50, auto;
 }
 
 .imgContainer > img {
